Ver 1.9(2) : fixed issues in practice break feature.

--- a/Modacity/Modacity/ViewController/PlayPractice/PracticeBreakPromptView.xib
+++ b/Modacity/Modacity/ViewController/PlayPractice/PracticeBreakPromptView.xib
@@ -15,6 +15,7 @@
                 <outlet property="buttonReady" destination="066-DR-Ifr" id="rBi-0f-0Xh"/>
                 <outlet property="labelHour" destination="UiD-zj-cLd" id="Crd-v1-yDP"/>
                 <outlet property="labelMinute" destination="OAO-YI-h0r" id="Pvr-w6-ocF"/>
+                <outlet property="labelNote" destination="aoC-cS-u7c" id="2v2-LU-cFh"/>
                 <outlet property="labelSecond" destination="qKP-nA-Lq6" id="jYF-3o-3FI"/>
                 <outlet property="viewContent" destination="mXc-6y-zp0" id="yO9-UA-euQ"/>
                 <outlet property="viewContentPanel" destination="aoG-nI-MIx" id="bHL-XF-vOv"/>
